added unlimited overtimes

--- a/comp.cfg
+++ b/comp.cfg
@@ -16,6 +16,9 @@ sv_grenade_trajectory_prac_pipreview "false"    // disable grenade preview
 exec "gamemode_competitive"                     // Default competitive config
 mp_limitteams                        "1"        // Allow free team-switching
 bot_quota                            "0"        // Disable bots
+mp_overtime_enable                   "1"        //
+mp_overtime_limit                    "0"        // unlimited overtime
+
 // No Warmup Settings
 mp_warmup_online_enabled            "true"      // enable warmup
 mp_warmup_pausetimer                "1"         // enable infinite warmuptime
